[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Screens/Credits.gd" type="Script" id=1]
[ext_resource path="res://src/UI/goback-button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/UI_Theme.tres" type="Theme" id=3]

[node name="CreditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 2 )]
margin_left = 936.0
margin_top = 24.0
margin_right = 999.0
margin_bottom = 55.0
reference_path = "res://src/Screens/StartScreen.tscn"
start_focused = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -405.0
margin_right = 406.0
margin_bottom = 71.0
text = "Credits"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 24.0
margin_top = 93.0
margin_right = 1000.0
margin_bottom = 576.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditList" type="RichTextLabel" parent="ScrollContainer"]
margin_right = 980.0
margin_bottom = 490.0
rect_min_size = Vector2( 980, 490 )
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_CreditsScreen_gui_input"]
[connection signal="gui_input" from="ScrollContainer/CreditList" to="." method="_on_CreditList_gui_input"]
